--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@chakra-ui/react": "^1.6.2",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "date-fns": "^2.21.3",
     "firebase": "^8.6.1",
+    "firebase-admin": "^9.8.0",
     "framer-motion": "^4.1.17",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.6.2"
+    "react-hook-form": "^7.6.2",
+    "swr": "^0.5.6"
   }
 }
