--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.13",
     "@chakra-ui/react": "^1.6.2",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
@@ -16,10 +17,11 @@
     "firebase-admin": "^9.8.0",
     "framer-motion": "^4.1.17",
     "js-cookie": "^2.2.1",
-    "next": "10.2.0",
+    "next": "^10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.6.2",
+    "react-icons": "^4.2.0",
     "swr": "^0.5.6"
   }
 }
