--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "framer-motion": "^4.1.17",
     "js-cookie": "^2.2.1",
     "next": "^10.2.3",
+    "pino": "^6.11.3",
+    "pino-logflare": "^0.3.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.6.2",
