--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^4.1.17",
     "js-cookie": "^2.2.1",
     "next": "^10.2.3",
+    "next-seo": "^4.24.0",
     "pino": "^6.11.3",
     "pino-logflare": "^0.3.8",
     "react": "17.0.2",
