--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^8.6.1",
     "firebase-admin": "^9.8.0",
     "framer-motion": "^4.1.17",
+    "iframe-resizer": "^4.3.2",
     "js-cookie": "^2.2.1",
     "next": "^10.2.3",
     "next-seo": "^4.24.0",
