--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@chakra-ui/react": "^1.6.2",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/mdx": "^0.15.4",
+    "@mdx-js/react": "^1.6.22",
+    "@next/mdx": "^10.2.3",
     "@stripe/stripe-js": "^1.15.0",
     "date-fns": "^2.21.3",
     "firebase": "^8.6.1",
@@ -27,6 +31,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.6.2",
     "react-icons": "^4.2.0",
+    "react-markdown": "^6.0.2",
     "swr": "^0.5.6"
   }
 }
